--- a/deploy/kubernetes/charts/index.yaml
+++ b/deploy/kubernetes/charts/index.yaml
@@ -1,3 +1,17 @@
 apiVersion: v1
-entries: {}
-generated: "2021-02-03T01:42:46.265305893-05:00"
+entries:
+  helm-chart:
+  - apiVersion: v1
+    created: "2021-02-03T05:04:09.804378811-05:00"
+    dependencies:
+    - name: nginx-ingress
+      repository: https://charts.helm.sh/stable
+      version: 0.4.2
+    description: A Helm chart for Sock Shop
+    digest: ba6337a57374d55c0caa88e3f10608b238ad84e2a757d967b130547a09aaf350
+    home: https://github.com/microservices-demo/microservices-demo
+    name: helm-chart
+    urls:
+    - helm-chart-0.2.0.tgz
+    version: 0.2.0
+generated: "2021-02-03T05:04:09.798162627-05:00"
