--- a/deploy/kubernetes/helm-chart/Chart.yaml
+++ b/deploy/kubernetes/helm-chart/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
-description: A Helm chart for Sock Shop
 name: helm-chart
 version: 0.2.0
+home: https://github.com/microservices-demo/microservices-demo
+description: A Helm chart for Sock Shop
