--- a/deploy/kubernetes/autoscaling/cart-hsc.yaml
+++ b/deploy/kubernetes/autoscaling/cart-hsc.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sock-shop
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1
+    apiVersion: apps/v1beta1
     kind: Deployment
     name: cart
   minReplicas: 1
